--- a/muyun_admin/src/main/resources/application-dev.properties
+++ b/muyun_admin/src/main/resources/application-dev.properties
@@ -3,7 +3,8 @@
 ####################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://47.100.219.95:3306/db_muyun?useEncoding=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://47.100.219.95:3306/db_muyun?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=123456
 # \u521D\u59CB\u5316\u8FDE\u63A5\u5927\u5C0F[0]
