--- a/muyun_admin/src/main/resources/application-prod.properties
+++ b/muyun_admin/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@
 ####################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://140.143.136.234:3306/ingcore?useEncoding=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://140.143.136.234:3306/ingcore?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=a
 # \u521D\u59CB\u5316\u8FDE\u63A5\u5927\u5C0F[0]
