--- a/muyun_admin/pom.xml
+++ b/muyun_admin/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.muyun</groupId>
 	<artifactId>muyun_admin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
@@ -22,8 +22,21 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<!-- 移除嵌入式tomcat插件 -->
+<!--			<exclusions>-->
+<!--				<exclusion>-->
+<!--					<groupId>org.springframework.boot</groupId>-->
+<!--					<artifactId>spring-boot-starter-tomcat</artifactId>-->
+<!--				</exclusion>-->
+<!--			</exclusions>-->
 		</dependency>
-
+		<!--部署项目时解开-->
+		<!--		<dependency>-->
+		<!--			<groupId>org.apache.tomcat</groupId>-->
+		<!--			<artifactId>tomcat-servlet-api</artifactId>-->
+		<!--			<version>8.0.36</version>-->
+		<!--			<scope>provided</scope>-->
+		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
