--- a/muyun_admin/src/main/resources/application.properties
+++ b/muyun_admin/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.mvc.view.suffix=.jsp
 spring.thymeleaf.cache=false
 spring.thymeleaf.enable-spring-el-compiler=false
 
+logging.level.com.muyun.core.dao=debug
+
 #\u9759\u6001\u6587\u4EF6\u8BBF\u95EE\u914D\u7F6E
 #spring.mvc.static-path-pattern=/static/**
 
