--- a/muyun_admin/src/main/resources/application-prod.properties
+++ b/muyun_admin/src/main/resources/application-prod.properties
@@ -3,9 +3,10 @@
 ####################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://140.143.136.234:3306/ingcore?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.url=jdbc:mysql://47.100.219.95:3306/db_muyun?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
 spring.datasource.username=root
-spring.datasource.password=a
+spring.datasource.password=123456
 # \u521D\u59CB\u5316\u8FDE\u63A5\u5927\u5C0F[0]
 spring.datasource.druid.initial-size=1
 # \u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5\u6570[0]
