--- a/muyun_admin/src/main/resources/application-dev.properties
+++ b/muyun_admin/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 ####################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://47.100.219.95:3306/db_muyun?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CTT&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://47.100.219.95:3306/db_muyun?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&useSSL=true
 
 spring.datasource.username=root
 spring.datasource.password=123456
